src/commands/snapshots/udb__commands__misc__tests__bt.snap
---
source: src/commands/misc.rs
expression: s
---
0x55957a4931d7 ./item.c:21:5
0x55957a49351e ./main.c:9:5
0x7ff8fc0c6d90 ?:0:0
