src/commands/snapshots/udb__commands__misc__tests__dump_offset.snap
---
source: src/commands/misc.rs
expression: s
---
0000: 63 6f 75 6e 74 00 2f 68  63 6f 75 6e 74 00 2f 68    count./home/vori
0010: 73 65 6b 2f 73 68 6f 70  73 65 6b 2f 73 68 6f 70    sek/shopping.uns

0000: 14 05 01 03 12 02 3c 01  14 05 01 03 12 02 3c 01    ......<......K..
0010: 06 01 05 0c 06 68 05 10  06 01 05 0c 06 68 05 10    .....h.....T..^.
