src/commands/snapshots/udb__commands__misc__tests__find_all_hex.snap
---
source: src/commands/misc.rs
expression: s
---
Core Addresses:
   0x55957a492028
   0x55957a492129
   0x55957a492131
   0x55957a492139
   0x55957a492279
   0x55957a492281
   0x55957a492289
   0x55957a49233c
   0x55957a492424
   0x55957a492454
   ...
Exe Offsets:
   0x28
   0x129
   0x131
   0x139
   0x279
   0x281
   0x289
   0x33c
   0x424
   0x454
   ...

Core Addresses:
   0x55d1a7821129
   0x55d1a7821131
   0x55d1a7821139
   0x55d1a7821279
   0x55d1a7821281
   0x55d1a7821289
   0x55d1a782133c
   0x55d1a782140c
   0x55d1a7821424
   0x55d1a7821454
   ...
Exe Offsets:
   0x129
   0x131
   0x139
   0x279
   0x281
   0x289
   0x33c
   0x40c
   0x424
   0x454
   ...
